--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -307,6 +307,7 @@
   <string name="History_video_Firstly">Prendi in primo luogo il video della storia</string>
   <string name="IGNORE">Ignora</string>
   <string name="IMAGE_ERR">Caricamento fallito, l\'immagine è troppo grande</string>
+  <string name="INFRARED_IDENTIFY_SET">Identificazione a infrarossi</string>
   <string name="INVALID_ACCOUNT">Email errata</string>
   <string name="INVALID_CODE">Codice non valido</string>
   <string name="IN_APP_SOUND">Suoneria</string>
