--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -307,6 +307,7 @@
   <string name="History_video_Firstly">Trước tiên hãy tải video về lịch sử</string>
   <string name="IGNORE">Bỏ qua</string>
   <string name="IMAGE_ERR">Tải lên lỗi, kích thước ảnh quá lớn</string>
+  <string name="INFRARED_IDENTIFY_SET">Nhận dạng hồng ngoại</string>
   <string name="INVALID_ACCOUNT">Tài khoản không tồn tại</string>
   <string name="INVALID_CODE">Mã không tồn tại</string>
   <string name="IN_APP_SOUND">In-APP báo âm thanh</string>
