--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -307,6 +307,7 @@
   <string name="History_video_Firstly">请先获取历史录像</string>
   <string name="IGNORE">忽略未读</string>
   <string name="IMAGE_ERR">图片太大，请重新选择</string>
+  <string name="INFRARED_IDENTIFY_SET">红外增强识别</string>
   <string name="INVALID_ACCOUNT">此账号还没有注册</string>
   <string name="INVALID_CODE">验证码已过期</string>
   <string name="IN_APP_SOUND">声音</string>
