--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -307,7 +307,6 @@
   <string name="History_video_Firstly">Сначала возьмите видео с историей</string>
   <string name="IGNORE">Игнорировать</string>
   <string name="IMAGE_ERR">Изображение слишком большое</string>
-  <string name="INFRARED_IDENTIFY_SET">ИК-распознавание</string>
   <string name="INVALID_ACCOUNT">Данный аккаунт еще не зарегистрирован</string>
   <string name="INVALID_CODE">Истек срок проверочного кода</string>
   <string name="IN_APP_SOUND">Звуковой сигнал</string>
@@ -413,6 +412,7 @@
   <string name="MESSAGES_FACE_MOVE">Переход к существующему лицу</string>
   <string name="MESSAGES_FACE_MOVE_BTN">переехать в</string>
   <string name="MESSAGES_FACE_NONE">Без лица</string>
+  <string name="MESSAGES_FACE_VISIT_SUM">%s человек посетили сегодня</string>
   <string name="MESSAGES_FACE_VISIT_TIMES">Посетите %s раз в течение 30 дней</string>
   <string name="MESSAGES_FILTER_ALL">Все</string>
   <string name="MESSAGES_FILTER_STRANGER">Незнакомец</string>
