--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -307,7 +307,6 @@
   <string name="History_video_Firstly">Por favor, obtenga el video del historial en primer lugar</string>
   <string name="IGNORE">Ignorar</string>
   <string name="IMAGE_ERR">La foto es demasiado grande, no es bueno para la pruba, elija de nuevo por favor</string>
-  <string name="INFRARED_IDENTIFY_SET">Identificación infrarroja</string>
   <string name="INVALID_ACCOUNT">Esta cuenta no ha sido inscribida</string>
   <string name="INVALID_CODE">Código de prueba inválido</string>
   <string name="IN_APP_SOUND">Sonido</string>
@@ -413,6 +412,7 @@
   <string name="MESSAGES_FACE_MOVE">Mover a una cara existente</string>
   <string name="MESSAGES_FACE_MOVE_BTN">mover a</string>
   <string name="MESSAGES_FACE_NONE">No cara</string>
+  <string name="MESSAGES_FACE_VISIT_SUM">%s personas visitaron hoy</string>
   <string name="MESSAGES_FACE_VISIT_TIMES">Visita %s veces dentro de 30 días</string>
   <string name="MESSAGES_FILTER_ALL">Todas</string>
   <string name="MESSAGES_FILTER_STRANGER">Desconocido</string>
