--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -307,7 +307,6 @@
   <string name="History_video_Firstly">Veuillez d\'abord obtenir la vidéo d\'historique</string>
   <string name="IGNORE">Ignorer</string>
   <string name="IMAGE_ERR">Échec du transfert, l\'image est trop grande</string>
-  <string name="INFRARED_IDENTIFY_SET">Identification infrarouge</string>
   <string name="INVALID_ACCOUNT">Compte inconnu</string>
   <string name="INVALID_CODE">Code de vérification faux</string>
   <string name="IN_APP_SOUND">Alerte sonore</string>
@@ -413,6 +412,7 @@
   <string name="MESSAGES_FACE_MOVE">Passer à un visage existant</string>
   <string name="MESSAGES_FACE_MOVE_BTN">déménager à</string>
   <string name="MESSAGES_FACE_NONE">Pas de visage</string>
+  <string name="MESSAGES_FACE_VISIT_SUM">%s personnes ont visité aujourd\'hui</string>
   <string name="MESSAGES_FACE_VISIT_TIMES">Visite %s fois dans les 30 jours</string>
   <string name="MESSAGES_FILTER_ALL">Tout</string>
   <string name="MESSAGES_FILTER_STRANGER">Étranger</string>
